objects/Product_Material__c.object
<CustomObject><fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Latest_Price__c</fullName>
        <formula>Material__r.Latest_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Price</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Material_Index__c</fullName>
        <label>Material Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Material_Name__c</fullName>
        <formula>Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Product Materials</relationshipLabel>
        <relationshipName>Product_Materials_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Price_For_Quote_Calculated__c</fullName>
        <formula>Latest_Price__c * 1.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Latest Price + 30% Markup</inlineHelpText>
        <label>30% Markup</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Price_for_Quote__c</fullName>
        <label>Price for Quote</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Process_Index__c</fullName>
        <label>Process Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Product_Configuration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Materials</relationshipLabel>
        <relationshipName>Product_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Product_Index__c</fullName>
        <label>Product Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Required_Qty_Per_UOM__c</fullName>
        <label>Required Qty Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Required_Qty_Per__c</fullName>
        <label>Required Qty Per</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Required_Qty_UOM__c</fullName>
        <label>Required Qty UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Required_Qty__c</fullName>
        <label>Required Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Route_ID__c</fullName>
        <label>Route ID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Route_Index__c</fullName>
        <label>Route Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Cost_Mirror__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Required_Qty__c *  Price_for_Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Product Material</label><nameField>
        <label>Product Materials Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Product Materials</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>